update ResponseBuilder with method to create Location header